[package]
name = "resolution-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.14.1"
sha3 = "0.10.8"
web3 = "0.19.0"
tokio = { version = "1.32.0", features = ["full"] }
dotenv = "0.15.0"
async-trait = "0.1.73"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
